Fix permissions and line endings
Necessary if the shell script is changed by a windows system.

--- a/.github/workflows/code_quality_assurance.yml
+++ b/.github/workflows/code_quality_assurance.yml
@@ -3,7 +3,7 @@ name: Code Quality Assurance
 on: [push]
 
 jobs:
-  unit-test:
+  test:
    runs-on: ubuntu-latest   
    steps:
     - name: Checkout head
@@ -16,4 +16,8 @@ jobs:
       run: phpunit
     - name: Api Tests
       working-directory: ./apitests
-      run: ./run-api-tests.sh
+      run: |
+            sudo apt-get install dos2unix
+            dos2unix ./*
+            chmod +x ./run-api-tests.sh
+            ./run-api-tests.sh
