--- a/apitests/test_use_case.tavern.yaml
+++ b/apitests/test_use_case.tavern.yaml
@@ -7,7 +7,7 @@ stages:
     response:
       status_code: 200
 
-  - name: Post with valid address
+  - name: Post a report
     request:
       url: http://localhost:8080/api/v0/report
       method: POST
@@ -15,11 +15,15 @@ stages:
         report:
           time: "2020-03-10T12:00:00Z"
           location:
-            street: "Garibaldistraße"
-            number: "7A"
-            zip: "13158"
-            city: "Berlin"
-            country: "Germany"
+            coordinates:
+              longitude: 52.587516
+              latitude: 13.362886
+            address:
+              street: "Garibaldistraße"
+              number: "7A"
+              zip: "13158"
+              city: "Berlin"
+              country: "Germany"
           stink:
             kind: "Biomüll"
             intensity: 3
@@ -40,11 +44,15 @@ stages:
           report:
             time: "2020-03-10T12:00:00Z"
             location:
-              street: "Garibaldistraße"
-              number: "7A"
-              zip: "13158"
-              city: "Berlin"
-              country: "Germany"
+              coordinates:
+                longitude: 52.587516
+                latitude: 13.362886
+              adress:
+                street: "Garibaldistraße"
+                number: "7A"
+                zip: "13158"
+                city: "Berlin"
+                country: "Germany"
             stink:
               kind: "Biomüll"
               intensity: 3
@@ -52,41 +60,3 @@ stages:
               name: "Jane Doe"
               email: "jane.doe@provider.org"
 
-  - name: Post with valid coordinates
-    request:
-      url: http://localhost:8080/api/v0/report
-      method: POST
-      json:
-        report:
-          time: "2021-03-10T12:00:00Z"
-          location:
-            longitude: 52.5848299
-            latitude: 13.3651592
-          stink:
-            kind: "Biomüll"
-            intensity: 3
-          reporter:
-            name: "Jane Doe"
-            email: "jane.doe@provider.org"
-    response:
-      status_code: 201
-
-  - name: Get previously stored entry
-    request:
-      url: http://localhost:8080/api/v0/report
-      method: GET
-    response:
-      status_code: 200
-      body:
-        [1]:
-          report:
-            time: "2021-03-10T12:00:00Z"
-            location:
-              longitude: 52.5848299
-              latitude: 13.3651592
-            stink:
-              kind: "Biomüll"
-              intensity: 3
-            reporter:
-              name: "Jane Doe"
-              email: "jane.doe@provider.org"
