--- a/.github/workflows/code_quality_assurance.yml
+++ b/.github/workflows/code_quality_assurance.yml
@@ -5,6 +5,15 @@ on: [push]
 jobs:
   test:
    runs-on: ubuntu-latest
+   services:     
+    mysql:
+      image: mysql:5.7.28
+      env:
+          MYSQL_DATABASE: stink_db
+      ports:
+          - 3306
+      options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        
    steps:
     - name: Checkout head
       uses: actions/checkout@v2
@@ -21,6 +30,9 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+    - name: Prepare Database
+      working-directory: ./infrastructure
+      run: mysql -uroot -proot--execute="\. /sql/create_tables.sql"
     - name: Prepare Api Tests
       working-directory: ./apitests
       run: |
