Try to add my sql in docker

--- a/.github/workflows/code_quality_assurance.yml
+++ b/.github/workflows/code_quality_assurance.yml
@@ -5,14 +5,7 @@ on: [push]
 jobs:
   test:
    runs-on: ubuntu-latest
-   services:     
-    mysql:
-      image: mysql:5.7.28
-      env:
-          MYSQL_DATABASE: stink_db
-      ports:
-          - 3306
-        
+       
    steps:
     - name: Checkout head
       uses: actions/checkout@v2
@@ -30,8 +23,10 @@ jobs:
       with:
         python-version: '3.x'
     - name: Prepare Database
-      working-directory: ./infrastructure
-      run: mysql -uroot -proot--execute="\. /sql/create_tables.sql"
+      working-directory: ./utils
+      run: |
+            ./start-my-sql-in-docker.sh
+            ./create-tables.sh
     - name: Prepare Api Tests
       working-directory: ./apitests
       run: |
