--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -11,7 +11,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Install requirements
       working-directory: ./source
-      run: composer update --no-dev --no-scripts    
+      run: composer update --no-dev --no-scripts
+    - name: Delete unit tests
+      working-directory: ./source
+      run: rm -r ./test
     - name: Set up Python 3.x
       uses: actions/setup-python@v1
       with:
