--- a/source/phpunit.xml.dist
+++ b/source/phpunit.xml.dist
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/4.8/phpunit.xsd" bootstrap="./vendor/autoload.php" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" beStrictAboutTestsThatDoNotTestAnything="false" stopOnFailure="false">
+<phpunit
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/4.8/phpunit.xsd"
+    bootstrap="./vendor/autoload.php"
+    colors="true"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    beStrictAboutTestsThatDoNotTestAnything="false"
+    stopOnFailure="false"
+>
     <testsuites>
-        <testsuite name="Services">
-            <directory>./test/Services</directory>
-        </testsuite>
         <testsuite name="Apis">
             <directory>./test/Api</directory>
         </testsuite>
         <testsuite name="Models">
-            <file>./test/BaseModelTest.php</file>
             <directory>./test/Model</directory>
+        </testsuite>
+        <testsuite name="Mock">
+            <directory>./test/Mock</directory>
+        </testsuite>
+        <testsuite name="Utils">
+            <directory>./test/Utils</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./lib/Api</directory>
-            <file>./lib/BaseModel.php</file>
             <directory suffix=".php">./lib/Model</directory>
+            <directory suffix=".php">./lib/Mock</directory>
+            <directory suffix=".php">./lib/Utils</directory>
         </whitelist>
     </filter>
     <php>
