Allow additional response values in tavern test

--- a/apitests/test_use_case.tavern.yaml
+++ b/apitests/test_use_case.tavern.yaml
@@ -38,6 +38,7 @@ stages:
       method: GET
     response:
       status_code: 200
+      strict: no
       json:
         - location:
             coordinates:
