--- a/.github/workflows/code_quality_assurance.yml
+++ b/.github/workflows/code_quality_assurance.yml
@@ -11,9 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install requirements
         working-directory: ./source
-        run: |
-          php -v
-          composer update
+        run: composer update
       - name: Unit Tests
         working-directory: ./source
         run: composer test
