--- a/apitests/test_errors.tavern.yaml
+++ b/apitests/test_errors.tavern.yaml
@@ -25,7 +25,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           stink:
             kind: "Biomüll"
             intensity: 3
@@ -43,7 +42,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           location:
             street: "Kriemhildstraße"
             number: "2-18"
@@ -67,7 +65,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           location:
             longitude: 58.8004358
             latitude: 5.7053571
@@ -88,7 +85,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           location:
             coordinates:
               latitude: 52.587516
@@ -117,7 +113,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           location:
             street: "Garibaldistraße"
             number: "7A"
@@ -138,7 +133,6 @@ stages:
       method: POST
       json:
         report:
-          time: "2000-01-01T12:00:00Z"
           location:
             street: "Garibaldistraße"
             number: "7A"
@@ -148,6 +142,29 @@ stages:
           stink:
             kind: "Biomüll"
             intensity: 3
+      headers:
+        content-type: application/json
+    response:
+      status_code: 400
+
+  - name: Start after end
+    request:
+      url: http://localhost:8080/api/v0/report
+      method: POST
+      json:
+        report:
+          location:
+            street: "Garibaldistraße"
+            number: "7A"
+            zip: "13158"
+            city: "Berlin"
+            country: "Germany"
+          stink:
+            kind: "Biomüll"
+            intensity: 3
+          timeFrame:
+            startTime: "2021-01-25T20:48:00.000Z"
+            endTime: "2021-01-24T20:48:00.000Z"
       headers:
         content-type: application/json
     response:
