Connect via standard port instead of unix socket

--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Prepare Database
       working-directory: ./infrastructure
       run: |
-            docker run -v $(pwd)/sql:/commands --rm -d --name mysql -e MYSQL_ROOT_PASSWORD=totallyunsafe mysql:5.7.28
-            docker exec mysql mysql -uroot -ptotallyunsafe --execute="\. /commands/create_tables.sql"
+            docker run -v $(pwd)/sql:/commands --rm -d -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=totallyunsafe mysql:5.7.28
+            docker exec mysql mysql -p3306 -h127.0.0.1 -uroot -ptotallyunsafe --execute="\. /commands/create_tables.sql"
     - name: Prepare Api Tests
       working-directory: ./apitests
       run: pip install tavern
