--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -23,6 +23,7 @@ jobs:
       working-directory: ./infrastructure
       run: |
             docker run -v $(pwd)/sql:/commands --rm -d -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=totallyunsafe mysql:5.7.28
+            sleep 20
             docker exec mysql mysql -p3306 -h127.0.0.1 -uroot -ptotallyunsafe --execute="\. /commands/create_tables.sql"
     - name: Prepare Api Tests
       working-directory: ./apitests
