Run docker containers detached

--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -10,11 +10,11 @@ jobs:
     - name: Checkout head
       uses: actions/checkout@v2
     - name: Run the app
-      run: docker-compose up
+      run: docker-compose up -d
     - name: Install requirements
-      run: docker-compose exec apache composer update --no-dev --no-scripts
+      run: docker-compose exec -d apache composer update --no-dev --no-scripts
     - name: Delete unit tests
       working-directory: ./source
       run: rm -r ./test
     - name: Run Api Tests
-      run: docker-compose run tavern /apitests/run-api-tests.sh
+      run: docker-compose run -d tavern /apitests/run-api-tests.sh
