--- a/.github/workflows/code_quality_assurance.yml
+++ b/.github/workflows/code_quality_assurance.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Checkout head
         uses: actions/checkout@v2
       - name: Run the app
-        run: docker-compose up
+        run: docker-compose up -d
       - name: Install requirements
-        run: docker-compose exec apache composer update
+        run: docker-compose exec -d apache composer update
       - name: Unit Tests
-        run: docker-compose exec apache composer test
+        run: docker-compose exec -d apache composer test
       - name: Linting
         working-directory: ./source
-        run: docker-compose exec apache composer phpcs
+        run: docker-compose exec -d apache composer phpcs
